2008-06-02  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/Evil.h:
	* src/lib/evil.c: (setenv), (unsetenv):
	setenv and unsetenv are already defined with cegcc

2008-06-01  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/Evil.h:
	* src/lib/evil.c:
	add open with several arguments
	add getcwd, lstat, setenv, unsetenv and evil_homedir_get.
	typo in doc

2008-06-01  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/dlfcn/dlfcn.c:
	memory leak with cegcc

	* src/lib/dlfcn/dlfcn.h:
	include limits.h for MinGW users

	* src/lib/mman/sys/mman.h:
	add MAP_FAILED error value

2008-05-20  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/dlfcn/dlfcn.h:
	dli_fname ncorrectly declared. Thanks to Dmitriy Mazovka.

2008-05-11  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/Evil.h:
	* src/lib/evil.c (getpid):
	add wrapper around GetCurrentProcessId()

2008-05-10  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/dlfcn/dlfcn.c: (dladdr):
	replace all the '\' by '/' in the filename found by dladdr

2008-04-28  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/Evil.h:
	* src/lib/evil.c: (evil_getcwd):
	add getcwd-like function

	* src/lib/dlfcn/dlfcn.c: (dladdr):
	* src/lib/dlfcn/dlfcn.h:
	add dladdr-like function. Formatting
	Remove unused define

	* src/lib/mman/sys/mman.h:
	remove unused define

2008-04-26  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/Evil.h:
	* src/lib/Makefile.am:
	* src/lib/dlfcn/Makefile.am:
	* src/lib/dlfcn/dlfcn.c: (get_last_error), (dlopen), (dlsym):
	* src/lib/evil.c: (evil_char_to_wchar), (evil_wchar_to_char):
	make char <--> wchar_t conversion functions public

	* src/lib/mman/Makefile.am:
	add cegcc flags

	* src/lib/mman/mman.c:
	move include

2008-04-23  Vincent Torri  <doursse at users dot sf dot net>

	* configure.ac:
	* src/bin/Makefile.am:
	* src/lib/Makefile.am:
	* src/lib/dlfcn/Makefile.am:
	* src/lib/mman/Makefile.am: